tests/regression/good/ylppa.gr
import Prelude

ylppa : forall a : Type, b : Type . a -> (a -> b) -> b
ylppa x f = f x

main : Int
main = ylppa (1,|2|) fst
