tests/regression/illtyped/badPoly3.gr
id : forall (a : Type) . a -> a
id x = x

add1 : Int -> Int
add1 x = x+1

main : Int
main = add1 (SourceId True)
